# curves_3d_library

./: CMakeLists.txt  README.md
src/: curvefactory.cpp  curves_lib.cpp  main.cpp
src/header/: curvefactory.h  curves_lib.h
src/test/: tests.cpp
